--- a/MemeMe-1/Base.lproj/Main.storyboard
+++ b/MemeMe-1/Base.lproj/Main.storyboard
@@ -65,11 +65,11 @@
                                         <rect key="frame" x="0.0" y="28" width="319" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pwq-IT-9H0" id="JqZ-Wj-X9n">
-                                            <rect key="frame" x="0.0" y="0.0" width="286" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="286" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="a1k-OX-Gmt">
-                                                    <rect key="frame" x="15" y="0.0" width="269" height="99.5"/>
+                                                    <rect key="frame" x="15" y="0.0" width="269" height="99"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -138,22 +138,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Mhe-pB-C6k">
-                                <rect key="frame" x="16" y="64" width="288" height="455"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VeV-Fh-iMT">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="150" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemeCell" id="lE4-wf-K6F">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemeCell" id="lE4-wf-K6F" customClass="MemeCollectionCell" customModule="MemeMe_2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K5a-lQ-YCT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="K5a-lQ-YCT" firstAttribute="leading" secondItem="lE4-wf-K6F" secondAttribute="leading" id="puH-Ll-8z8"/>
+                                            <constraint firstAttribute="trailing" secondItem="K5a-lQ-YCT" secondAttribute="trailing" id="qmF-ME-LWs"/>
+                                            <constraint firstAttribute="bottom" secondItem="K5a-lQ-YCT" secondAttribute="bottom" id="uen-qX-fFK"/>
+                                            <constraint firstItem="K5a-lQ-YCT" firstAttribute="top" secondItem="lE4-wf-K6F" secondAttribute="top" id="zfa-8D-MfF"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="memeImage" destination="K5a-lQ-YCT" id="cBY-9U-3ng"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -165,12 +179,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Mhe-pB-C6k" firstAttribute="top" secondItem="2SB-cW-P7B" secondAttribute="bottom" id="69S-1V-2YS"/>
-                            <constraint firstItem="Mhe-pB-C6k" firstAttribute="leading" secondItem="Sqc-T5-J7s" secondAttribute="leadingMargin" id="K21-Ne-R0X"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Mhe-pB-C6k" secondAttribute="trailing" id="S0A-fA-0mx"/>
+                            <constraint firstItem="Mhe-pB-C6k" firstAttribute="leading" secondItem="Sqc-T5-J7s" secondAttribute="leading" id="K21-Ne-R0X"/>
+                            <constraint firstAttribute="trailing" secondItem="Mhe-pB-C6k" secondAttribute="trailing" id="S0A-fA-0mx"/>
                             <constraint firstItem="rEG-xc-daz" firstAttribute="top" secondItem="Mhe-pB-C6k" secondAttribute="bottom" id="yGH-Qy-QhT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Sent memes" id="ixl-36-qA3"/>
+                    <navigationItem key="navigationItem" title="Sent memes" id="ixl-36-qA3">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zh8-bf-vee">
+                            <connections>
+                                <action selector="newMeme:" destination="sUi-oe-G2w" id="QfC-vn-GaX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collection" destination="Mhe-pB-C6k" id="ZP3-7j-VYa"/>
                     </connections>
